# Camagru42

./: .gitignore  Makefile  README.md  docker-compose.yml  env-pub
back/: Dockerfile  docker-compose.yml
back/camagru/: .gitignore  Cargo.toml  log.html
back/camagru/middleware/: auth.rs
back/camagru/src/: headers.rs  main.rs  request.rs  server.rs  utils.rs
back/camagru/src/controllers/: create.rs  gallery.rs  mod.rs  user.rs
back/camagru/src/dto/: create_dto.rs  gallery_dto.rs  mod.rs  request_dto.rs
back/camagru/src/middleware/: auth.rs
back/camagru/src/repositories/: create_repo.rs  gallery_repo.rs  mod.rs  user_repo.rs
back/camagru/src/routes/: routing.rs
back/database/: init.sql
front/: Dockerfile  nginx.conf
front/src/: create.html  econf.html  gallery.html  index.html
front/src/data/: data.json
front/src/html/: create.html  econf.html  error.html  esent.html  forgotPass.html  forpass.html  gallery.html  log.html  palettes.txt  register.html  resetPass.html  sign.html
front/src/javascript/: api.js  auth.js  create.js  esent.js  forgotPass.js  gallery.js  inputValidation.js  log.js  register.js  reset.js  resetPass.js
front/src/styles/: common.css  create.css  econf.css  esent.css  footer.css  gallery.css  header.css  log.css
