[package]
name = "camagru"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
base64 = "0.22.1"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
bcrypt = "0.15"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
chrono = "0.4"
